fixed notifcations on mobile

--- a/src/components/navigation/MainNavbar/MainNavbar.css
+++ b/src/components/navigation/MainNavbar/MainNavbar.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     align-items: center;
-    height: 125px;
+    height: 110px;
 }
 
 .logo-area {
@@ -10,7 +10,7 @@
     align-items: center;
     height: 100%;
     width: 65%; 
-    max-width: 300px;
+    max-width: 250px;
 
     min-width: 160px;
     justify-content: center !important;
@@ -22,8 +22,8 @@
     max-height: 100%;
     justify-content: center !important;
     height: 100%;
-    max-height: 120px;
-    padding: 15px;
+    max-height: 110px;
+    padding: 10px;
 }
 
 .account-area {
